Added missing extension in MANIFEST

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
-recursive-include src/menhir/contenttype/document *.txt *.py *.zcml *.po *.mo
+recursive-include src/menhir/contenttype/document *.txt *.py *.zcml *.po *.mo *.pt
 recursive-include docs *.txt
