Updated version, test and code style

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,17 +1,8 @@
 [buildout]
 develop = .
 parts = test
-extends = http://grok.zope.org/releaseinfo/grok-1.1.1.cfg
+extends = http://grok.zope.org/releaseinfo/1.3.2/versions.cfg
 versions = versions
-newest = false
-
-
-[versions]
-dolmen.app.layout = 1.0a1
-megrok.layout = 1.1
-zope.component = 3.9.1
-grokcore.view = 1.13.5
-
 
 [test]
 recipe = zc.recipe.testrunner
